# adaptiveSpreadX

./: CMakeLists.txt  CMakeLists_old.txt  CONTRIBUTORS.md  LICENSE  README.md  config.txt  setup.py
later_2/: bu_ContactNetwork.cpp  bu_ContactNetwork.h  bu_Specie.h  bu_Utility.cpp  bu_Utility.h  dynamics.cpp  dynamics.hpp
src/: ConfigurationFile.cpp  ConfigurationFile.hpp  ContactNetwork.cpp  ContactNetwork.h  ContactNetwork.hpp  SSA.cpp  SSA.h  SSA.hpp  Utility.h  bu_SSA.cpp  bu_SSA.h  dynamics.cpp  dynamics.hpp  main.cpp
src/algorithm/: Actions.hpp  ActionsFactory.hpp  Algorithm.cpp  Algorithm.hpp  AlgorithmImpl.hpp  Interaction.cpp  Interaction.hpp  SSA.cpp  SSA.hpp  SSATANX.cpp  SSATANX.hpp  Settings.cpp  Settings.hpp  TauLeap.cpp  TauLeap.hpp  Transformation.cpp  Transformation.hpp  Transition.cpp  Transition.hpp  TransitionFactory.cpp  TransitionFactory.hpp
src/configs/: Parser.hpp  Segments.cpp  Segments.hpp  SimulationConfig.cpp  SimulationConfig.hpp
src/configuration/: Configuration.cpp  Configuration.hpp  ConfigurationBlock.hpp  ConfigurationFile.cpp  ConfigurationFile.hpp  ConfigurationLine.cpp  ConfigurationLine.hpp  EdgeConfiguration.cpp  EdgeConfiguration.hpp  Exception.cpp  Exception.hpp  Helper.cpp  Helper.hpp  IConfiguration.hpp  InteractionConfiguration.cpp  InteractionConfiguration.hpp  NetworkConfiguration.cpp  NetworkConfiguration.hpp  SpeciesConfiguration.cpp  SpeciesConfiguration.hpp  Stream.cpp  Stream.hpp  TransitionConfiguration.cpp  TransitionConfiguration.hpp
src/cpp/: _adaptiveSpreadX.cpp  main.cpp
src/cpp/algorithm/: Actions.hpp  ActionsFactory.cpp  Algorithm.hpp  SSATANX.cpp  SSATANX.hpp  Settings.cpp  Settings.hpp  TauLeap.cpp
src/cpp/configuration/: Configuration.cpp  Configuration.hpp  Exception.hpp
src/cpp/graph/: Graph.hpp  GraphImpl.hpp
src/cpp/network/: AdaptionData.hpp  ContactNetwork.cpp  ContactNetwork.hpp  Interaction.cpp  InteractionManager.cpp  InteractionManager.hpp  Settings.hpp
src/cpp/types/: DistributionImpl.hpp  State.cpp  Tripel.hpp
src/cpp/utils/: Json.hpp  Parse.cpp
src/graph/: EdgeRate.hpp  Graph.hpp  GraphImpl.cpp  GraphImpl.hpp
src/network/: ContactNetwork.cpp  ContactNetwork.hpp  EdgeInitilisation.cpp  EdgeInitilisation.hpp  Individual.cpp  Individual.hpp  IndividualFactory.cpp  IndividualFactory.hpp  Interaction.hpp  InteractionManager.cpp  InteractionManager.hpp  NodeId.cpp  NodeId.hpp  NodeInitilisation.cpp  NodeInitilisation.hpp  Settings.cpp  Settings.hpp  SpeciesFactory.cpp  SpeciesFactory.hpp
src/python/: api.py
src/rules/: BirthRule.hpp  DeathRule.hpp  InteractionRule.hpp  Rules.cpp  Rules.hpp  TransitionRule.hpp
src/settings/: Algorithm.hpp  Network.hpp  Parse.cpp  Parse.hpp  Settings.cpp  Settings.hpp
src/species/: AttributeFactory.cpp  AttributeFactory.hpp  Individual.hpp  PeopleFactory.hpp  Species.cpp  Species.hpp
src/types/: Distribution.cpp  Distribution.hpp  DistributionImpl.cpp  DistributionImpl.hpp  EdgeModification.hpp  Factory.hpp  Map.hpp  NodeId.cpp  NodeId.hpp  Pair.hpp  ParameterTypes.hpp  Percentage.cpp  Percentage.hpp  Propability.cpp  Propability.hpp  Random.hpp  SortedCollection.hpp  State.cpp  State.hpp  Transformation.cpp  Transformation.hpp  Transition.hpp  Unsigned.hpp
src/utils/: Algorithm.hpp  Json.cpp  Json.hpp  Parse.cpp  Parse.hpp  Random.cpp  Random.hpp  String.cpp  String.hpp  parser.hpp  string.cpp  string.hpp
test/: CMakeLists.txt
test/configs/: nothing.txt  only_births.txt  only_deaths.txt  only_delete_edges.txt  only_interactions.txt  only_new_edges.txt  only_transitions.txt
test/configs/algorithm/: algo_missing.txt  default.txt  duplicate_algorithm.txt  epsilon_twice.txt  nothing.txt  only_births.txt  only_deaths.txt  only_delete_edges.txt  only_interactions.txt  only_new_edges.txt  only_transitions.txt  output_too_large.txt  output_twice.txt  ssa.txt  ssatan-x.txt  time_twice.txt  unknown_algorithm.txt  unknown_entry.txt
test/configs/algorithm/ssa/: nothing.txt  only_births.txt  only_deaths.txt  only_delete_edges.txt  only_interactions.txt  only_new_edges.txt  only_transitions.txt
test/configs/algorithm/ssatan-x/: full.txt  nothing.txt  only_births.txt  only_deaths.txt  only_interactions.txt  only_transitions.txt
test/configs/configuration/: header_twice.txt  json.txt  simple.txt  stream_test.txt
test/configs/network/: adaption_detect_no_change.txt  adaption_edges_twice.txt  adaption_edges_unknown.txt  adaption_missing_argument.txt  adaption_no_change_to_same.txt  adaption_ok.txt  adaption_only_edges_ok.txt  adaption_only_nodes_ok.txt  adaption_skip_lonely.txt  adaption_skip_zero.txt  add_edge_twice.txt  add_edge_unknown.txt  birth_twice.txt  birth_unknown.txt  death_twice.txt  death_unknown.txt  edges_twice.txt  interaction_twice.txt  interaction_unknown_a.txt  interaction_unknown_b.txt  interaction_unknown_c.txt  ok.txt  ok_no_edges.txt  quarantine_twice.txt  quarantine_unknown.txt  remove_edge_twice.txt  remove_edge_unknown.txt  seed_twice.txt  state_duplicate.txt  transition_twice.txt  transition_unknown_a.txt  transition_unknown_b.txt
test/src/: test_graph.cpp  test_parser.cpp  test_species_attributefactory.cpp  test_species_species.cpp  test_utilities_string.cpp
test/src/algorithm/: Actions.cpp  Interaction.cpp  SSA.cpp  SSATANX.cpp  Settings.cpp  Transformation.cpp  Transition.cpp
test/src/configuration/: Configuration.cpp  ConfigurationLine.cpp  EdgeConfiguration.cpp  Helper.cpp  NetworkConfiguration.cpp  SpeciesConfiguration.cpp  Stream.cpp
test/src/graph/: GraphImpl.cpp
test/src/network/: AdaptionData.cpp  ContactNetwork.cpp  Individual.cpp  IndividualFactory.cpp  Interaction.cpp  InteractionManager.cpp  NodeId.cpp  NodeInitilisation.cpp  Settings.cpp
test/src/settings/: Parse.cpp  Settings.cpp
test/src/types/: Distribution.cpp  DistributionImpl.cpp  NodeId.cpp  Pair.cpp  Propability.cpp  State.cpp  Tripel.cpp
test/src/unit/: test_configurationfile.cpp  test_graph.cpp  test_network.cpp  test_parser.cpp  test_simulationconfig.cpp
test/src/utils/: Algorithm.cpp  Json.cpp  Parse.cpp  Random.cpp  String.cpp
(+6 files in other folders)
